test/tests/errors/error-for-not-location4.sm
// true
// false
/**/
/**/

program {
    const x = 0;
    for (x = 1,2) {}
}